--- a/eGmat.css
+++ b/eGmat.css
@@ -21,6 +21,8 @@
     margin-left: 40%;
     padding-top: 1%;
     padding-bottom: 1%;
+    background-color: #0fa2eb;
+    color: #ffffff;
 }
 
 .qvname{
@@ -57,7 +59,7 @@ input[type=number] {
     
 }
 
-#totalGraphUi div,#twoGraphUi div{
+#totalGraphUi div,#twoGraphUi div,#scrollUi div{
     margin-bottom: 2%;
 }
 
@@ -72,4 +74,26 @@ input[type=number] {
     float:right; 
     width:45%;
     padding-left: 4%;
+}
+
+.meter,.meterQuant,.meterVerbal { 
+	height: 20px;  /* Can be anything */
+    background:#f5f5f5;
+}
+
+.meter > span:nth-child(1),.meterQuant > span:nth-child(1),.meterVerbal > span:nth-child(1) {
+  display: inline-block;
+  height: 100%;
+  background-color:#0fa2eb;
+  width:30%;
+  text-align: center;
+  float:left;
+  
+}
+.meter > span:nth-child(2),.meterQuant > span:nth-child(2),.meterVerbal > span:nth-child(2) {
+  display: inline-block;
+  height: 100%;
+  background-color: #ffe28a;
+  text-align: center;
+  width:10%
 }
